Bug 412833 - Monthview shows comma in year
Summary: Monthview shows comma in year
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: monthview (other bugs)
Version First Reported In: 5.12.2
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-10 23:27 UTC by Trevor Parsons
Modified: 2019-10-16 15:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12.3
Sentry Crash Report:


Attachments
Screenshot of part of korganizer window showing comma in year in monthview (30.23 KB, image/png)
2019-10-10 23:27 UTC, Trevor Parsons
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Trevor Parsons 2019-10-10 23:27:24 UTC
Created attachment 123140 [details]
Screenshot of part of korganizer window showing comma in year in monthview

SUMMARY
In the month view of Korganizer, the year contains a comma, as if it were a normal numeral.

STEPS TO REPRODUCE
1. Start Korganizer
2. Switch to month view

OBSERVED RESULT
The year contains a comma. For example, at the time of reporting the month and year are shown as "October 2,019".

EXPECTED RESULT
The year should not contain a comma.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.3.5-arch1-1-ARCH
(available in About System)
KDE Plasma Version: 5.16.90
KDE Frameworks Version: 5.62.0
Qt Version: 5.14.0 (built against 5.13.1)

ADDITIONAL INFORMATION
Comment 1 Allen Winter 2019-10-14 15:30:52 UTC
zoit!
it sure does.
Comment 2 Allen Winter 2019-10-14 16:46:50 UTC
patch is up for review at https://phabricator.kde.org/D24638
Comment 3 Trevor Parsons 2019-10-14 23:38:01 UTC
(In reply to Allen Winter from comment #2)
> patch is up for review at https://phabricator.kde.org/D24638

Looks good to my untutored eye. Thanks for such quick work, Allen!
Comment 4 Allen Winter 2019-10-15 13:04:49 UTC
Git commit a5c067fbc83c59d34166048a58fe12e5942f3e36 by Allen Winter.
Committed on 15/10/2019 at 13:02.
Pushed by winterz into branch 'Applications/19.08'.

month/monthscene.cpp - remove comma in year (in the title)

Differential Revision: https://phabricator.kde.org/D24638

M  +3    -3    src/month/monthscene.cpp

https://commits.kde.org/eventviews/a5c067fbc83c59d34166048a58fe12e5942f3e36