month/monthscene.cpp - remove comma in year (in the title)

BUG: 412833

Differential Revision: https://phabricator.kde.org/D24638